force-app/main/default/objects/redwing__Criterion_Rating__c/redwing__Criterion_Rating__c.object-meta.xml
<CustomObject>
    <label>Criterion Rating</label>
    <nameField>
        <displayFormat>CRN-{0}</displayFormat>
        <label>Criterion Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criterion Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>