force-app/main/default/objects/redwing__Criterion_Rating__c/fields/redwing__Approver_Notes__c.field-meta.xml
<CustomField>
    <fullName>redwing__Approver_Notes__c</fullName>
    <label>Approver Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>