force-app/main/default/objects/redwing__Criterion_Rating__c/fields/redwing__Archived__c.field-meta.xml
<CustomField>
    <fullName>redwing__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>