force-app/main/default/objects/redwing__Criterion_Rating__c/fields/redwing__Criterion__c.field-meta.xml
<CustomField>
    <fullName>redwing__Criterion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Criterion</label>
    <referenceTo>redwing__Criterion__c</referenceTo>
    <relationshipLabel>Criterion Ratings</relationshipLabel>
    <relationshipName>Criterion_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>