force-app/main/default/objects/redwing__Criterion_Rating__c/fields/redwing__Learning__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning</label>
    <referenceTo>redwing__Learning__c</referenceTo>
    <relationshipLabel>Criterion Ratings</relationshipLabel>
    <relationshipName>Criterion_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>