force-app/main/default/objects/redwing__Criterion_Rating__c/fields/redwing__Learning_Assignment__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Assignment__c</fullName>
    <label>Learning Assignment</label>
    <referenceTo>redwing__Learning_Assignment__c</referenceTo>
    <relationshipLabel>Criterion Ratings</relationshipLabel>
    <relationshipName>Criterion_Ratings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>