force-app/main/default/objects/redwing__Criterion_Rating__c/fields/redwing__Parent__c.field-meta.xml
<CustomField>
    <fullName>redwing__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>redwing__Criterion_Rating__c</referenceTo>
    <relationshipLabel>Criterion Ratings</relationshipLabel>
    <relationshipName>Criterion_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>