force-app/main/default/objects/redwing__Criterion_Rating__c/fields/redwing__Score__c.field-meta.xml
<CustomField>
    <fullName>redwing__Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>